objects/Clientes_do_Distribuidor__c.object
<CustomObject>
    <description>Identifica a relação entre Lead x Conta (cliente) x Conta (atac/distr) os quais são utilizados para identificar os pontos de venda atendidos pelos clientes PERNOD.</description>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifica o cliente PERNOD.</description>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Clientes_do_distribuidor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codigo_do_Fornecedor_AN8__c</fullName>
        <formula>Distribuidor_Atacadista__r.Client_code_AN8__c</formula>
        <label>Código do Fornecedor (AN8)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribuidor_Atacadista__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifica a conta do distribuidor/atacadista.</description>
        <label>Distribuidor / Atacadista</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Clientes_do_distribuidor1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relação com o Lead</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Clientes_do_distribuidor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>internal_id__c</fullName>
        <description>identifica o id interno da tabela.</description>
        <externalId>true</externalId>
        <label>internal id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Fornecedor do Cliente</label>
    <listViews>
        <fullName>All</fullName>
        <columns>internal_id__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Cliente__c</columns>
        <columns>Distribuidor_Atacadista__c</columns>
        <columns>Lead__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>Codigo_do_Fornecedor_AN8__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Nome da Clientes do Distribuidor</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fornecedores do Cliente</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>